# on_prem_rag

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  PRODUCT_REQUIREMENTS_DOCUMENT.md  PROGRESS_REPORTING_FIX.md  README.md  SECURITY.md  SETUP.md  chainlit.md  docker-compose.yml  env.example  gemini-summary.md  justfile  pyproject.toml  pyrightconfig.json  pytest.ini  test_progress_simulation.py  test_websocket_connection.py
.chainlit/translations/: it.json
.cursor/commands/: README.md  branch-cleanup.md  commit.md  create-validation.md  get-started.md  pr.md  run-validation.md  test.md  update-commits.md  update-date-tags.md
.cursor/rules/: api-design.mdc  audit-logging.mdc  branch-policy.mdc  coding-style.mdc  commit-message-standards.mdc  cross-platform-file-operations.mdc  cursor-rules.mdc  date-formatting.mdc  dependency-management.mdc  documentation-code-sync.mdc  environment-settings.mdc  feedback-integration.mdc  file-organization.mdc  function-definitions.mdc  git-version-control.mdc  github-integration.mdc  golden-rules.mdc  hours-registration.mdc  jupyter-notebook.mdc  language-preference.mdc  markdown.mdc  modular-architecture.mdc  product-owner.mdc  project-management.mdc  refine.mdc  requirement-capture.mdc  safe-project.mdc  scratch-file.mdc  scrum-master.mdc  security-best-practices.mdc  shared-rules.mdc  software-architect.mdc  software-developer.mdc  software-tester.mdc  sprint-demo.mdc  story-template.mdc  task-template.mdc  technical-debt.mdc  temp-files.mdc  test-assertions.md  (+3 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: cicd.yml  config.yml  demo.yml  epic.yml  feature.yml  story.yml  task.yml  test.yml  verification.yml
.github/workflows/: ci.yml  cleanup.yml  cloud-llm.yml  coverage-report.yml  model-download-only.yml  python-ci.yml  release.yml
.serena/: project.yml
agents/: README.md  architecture.md  codex_rules.md  coding_style.md  documentation_style.md  project_management.md  technical_decisions.md
docker/: docker-compose.prod.yml
docker/backend/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile
docs/: AUTHENTICATION_AUTORISATION.md  AUTHENTICATION_REQUIREMENTS.md  CONTEXT7.md  DEPLOYMENT.md  DOCKER_TECHNICAL.md  EMBEDDING_MODEL_SETUP.md  FRONTEND_API_CONFIGURATION.md  HEALTHCARE_DEMO.md  PDF_URL_FIX.md  PORTS.md  PRODUCT_REQUIREMENTS_DOCUMENT.md  PROJECT_STRUCTURE.md  Project Plan.md  SAFe Project Plan.md  SETUP.md  TECHNICAL_SUMMARY.md  TEST_AUTHENTICATION.md  TEST_DOCKER.md  USAGE.md  WEBSOCKET_IMPROVEMENTS.md  pre-commit-hooks.md
docs/guides/: chainlit-ui.md
docs/plan/: README.md  goal-1.md  goal-2.md  goal-3.md  goal-4.md  goal-5.md  goal-6.md
docs/portfolio/: HEALTHCARE_GUIDELINES_SOURCES.md  ISSUE-77-VALIDATION-PLAN.md  ISSUE-78-NEXT-STEPS.md  ISSUES_README.md  ISSUE_IMPLEMENTATION_WORKFLOW.md  api-v1-delivery-sequence.md  manual-verification-playbook.md
docs/project/: PROJECT_MANAGER.md  README.md  SAFe Project Plan.md  WBSO_FORM_ANALYSIS.md  wbso_projectformulier.md
docs/reports/: rag-evaluation-run-2026-04-24.md
docs/requirements/: README.md  REQUIREMENTS_TRACEABILITY_MATRIX.md  SOFTWARE_SUBSYSTEM_REQUIREMENTS.md  SYSTEM_REQUIREMENTS.md
docs/technical/: AGENTS.md  API_DESIGN.md  API_DOCUMENTATION.md  API_ENDPOINTS.md  API_REDESIGN.md  API_V1_SPEC.md  ARCHITECTURE_RULES_SKILLS.md  ASYNC_SYNC_PATTERNS.md  BRANCH_PROTECTION.md  CHROMADB_SCHEMA.md  CHUNKING.md  CICD_POLISH_IMPLEMENTATION.md  CI_SETUP.md  CI_TROUBLESHOOTING.md  CODEX.md  CUDA_SETUP.md  DATA_INTENSIVE_SYSTEMS.md  DATETIME_SYSTEM.md  DDD_TARGET_ARCHITECTURE.md  DOCX_PROCESSING.md  DOMAIN_DRIVEN_DESIGN.md  EMBEDDING.md  FEATURE_DESIGN_GUIDELINES.md  FRONTEND_TESTS.md  GIT_HOOKS.md  INTEGRATION_TESTING.md  LLM.md  MANUAL_UPLOAD_TESTING.md  MONETIZATION.md  (+25 more)
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json
notebooks/: document_loader_example.ipynb  embedding_score_stability.ipynb  notebooks.md  pdf_context_embedding.ipynb  pdf_conversion_debug.ipynb  pdf_embedding.ipynb  pdf_fast_embedding.ipynb  rag_exploration.ipynb  setup_notebook.py  top_k_comparison.ipynb
project/: README.md  SAFe Project Plan.md
scripts/: README.md  __init__.py  authenticate_google_calendar.py  cleanup-github-actions.sh  cleanup-merged-branches.sh  diagnose_chroma.py  fetch_healthcare_guidelines.py  generate_weekly_summary.py  is_cuda_available.py  link_cursor_skills.ps1  link_cursor_skills.sh  patch_llama_huggingface.py  run_calendar_upload.py  run_tests.py  setup_codex.ps1  setup_codex.sh  setup_embedding_models.py  setup_git_hooks.py  start_mcp_calendar_server.py  test_bottlenecks.py  test_calendar_credentials.py  test_chat_stream_local.py  test_mcp_calendar_client.py  update_date_tags.py  upload_documents.py  verify_stt_cuda.py  verify_voice_pipeline.py
src/: authenticate_google_calendar.py  test_app.py  test_calendar_credentials.py  test_mcp_calendar_client.py
tests/: README.md  __init__.py  conftest.py  run_mcp_calendar_integration_test.py  test_access_control.py  test_agents.py  test_audit_log_middleware.py  test_auth_service.py  test_chat_stream.py  test_chunking.py  test_commit_csv_processing.py  test_data_analysis.py  test_data_sovereignty.py  test_datetime_utils.py  test_document_loader.py  test_document_routes.py  test_documents_from_url.py  test_docx_utils.py  test_embedding_model_utils.py  test_embedding_shapes.py  test_embeddings.py  test_enhanced_documents_api.py  test_evaluation_dataset.py  test_evaluation_metrics.py  test_evaluation_runner.py  test_fetch_healthcare_guidelines.py  test_imports.py  test_ingestion_performance.py  test_llm_config.py  test_llm_gemini_integration.py  test_llm_providers.py  test_logging.py  test_mcp_calendar_server.py  test_metadata_store.py  test_page_processing.py  test_pdf_embedding_integration.py  test_pdf_embedding_pipeline.py  test_pdf_utils.py  test_placeholder.py  test_progress_simulation.py  (+27 more)
(+566 files in other folders)
