[project]
name = "on_prem_rag"
version = "0.1.0"
description = "A RAG pipeline project"
dependencies = [
    "fastapi>=0.104.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "ollama>=0.1.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "uvicorn>=0.24.0",
    "llama-index>=0.9.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-llms-huggingface>=0.1.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-readers-file>=0.1.0",
    "transformers>=4.37.0",
    "torch>=2.2.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.42.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pip>=25.1.1",
    "nbstripout>=0.8.1",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
    "pre-commit>=4.2.0",
    "jupyter>=1.0.0",
    "nbstripout>=0.6.1",
]

[tool.ruff]
# Enable commonly used rule sets:
select = [
    "E",  # pycodestyle: style issues like indentation, whitespace, etc.
    "F",  # Pyflakes: logical errors such as unused variables or undefined names
    "I",  # isort: import sorting
    "N",  # pep8-naming: class/function/method naming conventions
    "W",  # pycodestyle warnings (deprecated, generally covered by E)
    "B",  # bugbear: likely bugs and design problems
    "UP", # pyupgrade: syntax modernization (e.g., f-strings, walrus operator)
]

# Same as Black.
line-length = 132

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.12
target-version = "py312"

ignore = [
    "E501",    # line too long
    "PLR2004", # magic value used in comparison
    "E741",    # ambiguous variable name (we fixed this one)
    "C901",    # too complex
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR0912", # too many branches
    "PLR0911", # too many return statements
    "B006",    # mutable default argument
    "F",       # all F* errors (Pyflakes)
]

[tool.ruff.lint]
# Allow autofix for all enabled rules (when `--fix` is used)
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv]
python-preference = "only-managed" # Use uv-managed Python installations
