[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "on_prem_rag"
version = "0.1.0"
description = "A RAG pipeline project"
dependencies = [
    "fastapi>=0.104.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "ollama>=0.1.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "uvicorn>=0.24.0",
    "llama-index>=0.9.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-llms-huggingface>=0.1.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-readers-file>=0.1.0",
    "llama-index-vector-stores-chroma>=0.4.2",
    "transformers>=4.37.0",
    "torch>=2.2.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.42.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "sqlalchemy>=2.0.29",
    "pip>=25.1.1",
    "nbstripout>=0.8.1",
    "hf-xet>=1.1.2",
    "pytest>=7.4.0,<8.0.0",
    "python-multipart>=0.0.6",
    "ruff>=0.11.12",
    "crewai>=0.28.8",
    # OAuth2 and authentication dependencies
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "google-auth>=2.27.0",
    "cryptography>=41.0.0",
    "httpx>=0.24.0",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "docx2txt>=0.9",
    "pytest-asyncio>=0.23.8",
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.7",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.179.0",
]
requires-python = ">=3.12"

# Configure the package to include src directory and make it importable
[tool.setuptools.packages.find]
where = ["src", "scripts"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"
scripts = "scripts"

# Entry points executed via ``uv run``. ``start-backend`` uses the fully
# qualified package path so imports work without manually adjusting
# ``PYTHONPATH``.
[project.scripts]
start-backend = "backend.rag_pipeline.api.app:start_server"
# Start the authentication microservice
start-auth = "backend.auth_service.main:start_server"
# Start the test application for authentication testing
start-test-app = "test_app:start_server"
# Upload local files via CLI
upload-documents = "scripts.upload_documents:main"
# start-frontend: cd src/frontend && npm install && npm run dev

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
    "pre-commit>=4.2.0",
    "jupyter>=1.0.0",
    "nbstripout>=0.6.1",
    "nbformat>=5.10.4",
]

[tool.ruff]
# Enable commonly used rule sets:
# Same as Black.
line-length = 132

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Allow autofix for all enabled rules (when `--fix` is used)
fixable = ["ALL"]
unfixable = []
select = [
    "E",  # pycodestyle: style issues like indentation, whitespace, etc.
    "F",  # Pyflakes: logical errors such as unused variables or undefined names
    "I",  # isort: import sorting
    "N",  # pep8-naming: class/function/method naming conventions
    "W",  # pycodestyle warnings (deprecated, generally covered by E)
    "B",  # bugbear: likely bugs and design problems
    # "UP", # pyupgrade: syntax modernization (e.g., f-strings, walrus operator)
]

ignore = [
    "E402",    # Module level import not at top of file
    "E501",    # line too long
    "PLR2004", # magic value used in comparison
    "E741",    # ambiguous variable name (we fixed this one)
    "C901",    # too complex
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR0912", # too many branches
    "PLR0911", # too many return statements
    "B006",    # mutable default argument
    "B007",    # unused loop variable (prefer lenient style)
    "B008",    # depends in function definition
    "B904",    # raise exception from exception
    "F",       # all F* errors (Pyflakes)
    "UP035",   # X | Y for type sets,
    "I001",    # unsorted-imports: Allow unsorted imports for flexibility in import organization,
    # An issue has been filed for this: https://github.com/pkuppens/on_prem_rag/issues/53
]


# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
# Include src directory in Python path for testing
pythonpath = ["src", "src/backend"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
# Custom markers for test organization
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "internet: marks tests that require internet connectivity (deselect with '-m \"not internet\"')",
    "fts5: marks tests that require SQLite FTS5 extension (deselect with '-m \"not fts5\"')"
]
# Configure test discovery
norecursedirs = [".git", "build", "dist", ".venv", "node_modules"]
# Configure test environment
env_files = [".env.test"]
# Configure pytest-asyncio
asyncio_mode = "auto"

[tool.uv]
python-preference = "only-managed" # Use uv-managed Python installations

[tool.coverage.run]
source = ["src/backend"]
branch = true

[tool.coverage.report]
# Lines to exclude from coverage reporting
exclude_lines = [
    "pragma: no cover",           # Explicitly marked lines
    "def __repr__",               # Standard special methods
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",                       # Empty implementations
]
show_missing = true # Show line numbers of missing coverage

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=0.23.8",
    "safety>=3.2.11",
]


# Test commands for different scenarios:
# - Basic test with coverage: uv run pytest --cov=src/backend --cov-report=term
# - Test specific file: uv run pytest --cov=src/backend --cov-report=term tests/core/test_document_loader.py
# - Test specific function: uv run pytest --cov=src/backend --cov-report=term -k test_load_text_file
# - Generate HTML report: uv run pytest --cov=src/backend --cov-report=html

# Note: Direct script shortcuts are not supported in uv yet.
# Instead, use the following commands:
# - Terminal coverage: uv run pytest --cov=src/backend --cov-report=term
# - HTML coverage: uv run pytest --cov=src/backend --cov-report=html
# Additional arguments can be added after the command, e.g.:
# uv run pytest --cov=src/backend --cov-report=term -k test_load_text_file
