[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "on_prem_rag"
version = "0.1.0"
description = "A RAG pipeline project"
dependencies = [
    "fastapi>=0.104.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "ollama>=0.1.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "uvicorn>=0.24.0",
    "llama-index>=0.9.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-llms-huggingface>=0.1.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-readers-file>=0.1.0",
    "llama-index-vector-stores-chroma>=0.4.2",
    "transformers>=4.37.0",
    "torch>=2.2.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.42.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "sqlalchemy>=2.0.29",
    "pip>=25.1.1",
    "nbstripout>=0.8.1",
    "hf-xet>=1.1.2",
    "pytest>=7.4.0,<10.0.0",
    "python-multipart>=0.0.6",
    "ruff>=0.11.12",
    "crewai>=1.7.0",
    "crewai-tools>=0.17.0",
    # OAuth2 and authentication dependencies
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "google-auth>=2.27.0",
    "cryptography>=41.0.0",
    "httpx>=0.24.0",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "docx2txt>=0.9",
    "pytest-asyncio>=0.23.8",
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.7",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.179.0",
    "nbformat>=5.10.4",
    "nbconvert>=7.16.6",
    "pandas>=2.2.3",
    "mcp>=1.0.0",
    "tzdata>=2025.2",
    "nemoguardrails>=0.17.0",
    # Chainlit UI for agent interaction
    "chainlit>=1.3.0",
    "litellm>=1.75.3",
    "faster-whisper>=1.2.1",
    "rank-bm25>=0.2.2",
    "gtts>=2.5.4",  # TTS for verify_voice_pipeline and STT tests
]
requires-python = ">=3.12,<3.14"

# Configure the package to include src directory and make it importable
[tool.setuptools.packages.find]
where = ["src", "scripts"]
include = ["*"]

[tool.setuptools.package-data]
"backend.rag_pipeline" = ["py.typed"]
"backend.auth_service" = ["py.typed"]
"frontend" = ["py.typed"]
"wbso" = ["py.typed"]
"mcp_calendar" = ["py.typed"]

[tool.setuptools.package-dir]
"" = "src"
scripts = "scripts"

# Explicitly include standalone modules in src
[tool.setuptools]
py-modules = ["test_calendar_credentials", "test_mcp_calendar_client", "test_app", "authenticate_google_calendar"]

# Entry points executed via ``uv run``. ``start-backend`` uses the fully
# qualified package path so imports work without manually adjusting
# ``PYTHONPATH``.
[project.scripts]
start-backend = "backend.rag_pipeline.api.app:start_server"
# Start the authentication microservice
start-auth = "backend.auth_service.main:start_server"
# Start the test application for authentication testing
start-test-app = "test_app:start_server"
# Upload local files via CLI
upload-documents = "scripts.upload_documents:main"
# Fetch healthcare guideline PDFs by reference
fetch-healthcare-guidelines = "scripts.fetch_healthcare_guidelines:main"
# RAG evaluation on benchmark dataset
evaluate-rag = "backend.rag_pipeline.evaluation.cli:main"
# WBSO validation, upload, and reporting scripts
wbso-validate = "wbso.validation:main"
wbso-upload = "wbso.upload:main"
wbso-report = "wbso.reporting:main"
wbso-pipeline = "wbso.pipeline:main"
# WBSO database migration and reporting scripts
wbso-migrate = "wbso.migration:main"
wbso-db-report = "wbso.database_reporting:main"
# MCP Calendar Server
mcp-calendar-server = "mcp_calendar.calendar_server:main_sync"
mcp-test-report = "mcp_calendar.test_report_generator:main"
# Calendar credential and connection testing
test-calendar-credentials = "test_calendar_credentials:main"
test-mcp-calendar-client = "test_mcp_calendar_client:main_sync"
authenticate-google-calendar = "authenticate_google_calendar:main"
# Chainlit UI
start-chat = "frontend.chat.app:main"
# CUDA availability check (local GPU troubleshooting)
is-cuda-available = "backend.rag_pipeline.utils.cuda_check:main"
# start-frontend: cd src/frontend && npm install && npm run dev

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<10.0.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
    "pre-commit>=4.2.0",
    "jupyter>=1.0.0",
    "nbstripout>=0.6.1",
    "nbformat>=5.10.4",
]

[tool.ruff]
# Enable commonly used rule sets:
# Same as Black.
line-length = 132

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Allow autofix for all enabled rules (when `--fix` is used)
fixable = ["ALL"]
unfixable = []
select = [
    "E",  # pycodestyle: style issues like indentation, whitespace, etc.
    "F",  # Pyflakes: logical errors such as unused variables or undefined names
    "I",  # isort: import sorting
    "N",  # pep8-naming: class/function/method naming conventions
    "W",  # pycodestyle warnings (deprecated, generally covered by E)
    "B",  # bugbear: likely bugs and design problems
    # "UP", # pyupgrade: syntax modernization (e.g., f-strings, walrus operator)
]

ignore = [
    "E402",    # Module level import not at top of file
    "E501",    # line too long
    "E722",    # bare except (not important for this project)
    "PLR2004", # magic value used in comparison
    "E741",    # ambiguous variable name (we fixed this one)
    "C901",    # too complex
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR0912", # too many branches
    "PLR0911", # too many return statements
    "B006",    # mutable default argument
    "B007",    # unused loop variable (prefer lenient style)
    "B008",    # depends in function definition
    "B904",    # raise exception from exception
    "F",       # all F* errors (Pyflakes) — disable to catch F401 unused imports (~344 issues, ~313 auto-fixable)
    "UP035",   # X | Y for type sets
]


# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
# Include src directory in Python path for testing
pythonpath = ["src", "src/backend"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --durations=20 -n auto --dist loadfile -m 'not slow and not internet and not ollama and not docker and not cloud_llm'"
# -n auto: use all available cores locally (capped at 8 by conftest.py pytest_configure)
# --dist loadfile: keep tests from the same file on the same worker (preserves class/module fixtures)
# CI overrides -n auto with explicit -n 2 (GitHub runners are 2-core)
# Silence deprecation warnings from third-party packages (nemoguardrails, pydantic, langchain, etc.)
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
# Custom markers for test organization
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "internet: marks tests that require internet connectivity (deselect with '-m \"not internet\"')",
    "fts5: marks tests that require SQLite FTS5 extension (deselect with '-m \"not fts5\"')",
    "ci_setup: marks tests that validate CI/CD setup and configuration (deselect with '-m \"not ci_setup\"')",
    "guardrails_ci_skip: marks tests skipped on CI due to PyTorch CPU compatibility (run with '-m \"guardrails_ci_skip\"' locally)",
    "ci_skip: marks tests skipped on CI due to missing models or runner resource limits (run locally with full marker set)",
    "ollama: marks tests that require Ollama (local LLM on port 11434); skipped with clear message if not running",
    "docker: marks tests that require full Docker stack deployment (backend, auth, etc.); for deployment validation",
    "cloud_llm: marks tests that validate cloud LLM integration (Gemini, etc.); run with -m cloud_llm --run-internet; requires provider API key",
]
# Configure test discovery
norecursedirs = [".git", "build", "dist", ".venv", "node_modules"]
# Configure pytest-asyncio
asyncio_mode = "auto"

[tool.uv]
python-preference = "only-managed" # Use uv-managed Python installations

[tool.coverage.run]
source = ["src/backend"]
branch = true

[tool.coverage.report]
# Lines to exclude from coverage reporting
exclude_lines = [
    "pragma: no cover",           # Explicitly marked lines
    "def __repr__",               # Standard special methods
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",                       # Empty implementations
]
show_missing = true # Show line numbers of missing coverage

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "plotly>=6.3.1",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.8.0",
    "safety>=3.2.11",
    "seaborn>=0.13.2",
]


# Test commands for different scenarios:
# - Basic test with coverage: uv run pytest --cov=src/backend --cov-report=term
# - Test specific file: uv run pytest --cov=src/backend --cov-report=term tests/core/test_document_loader.py
# - Test specific function: uv run pytest --cov=src/backend --cov-report=term -k test_load_text_file
# - Generate HTML report: uv run pytest --cov=src/backend --cov-report=html

# Note: Direct script shortcuts are not supported in uv yet.
# Instead, use the following commands:
# - Terminal coverage: uv run pytest --cov=src/backend --cov-report=term
# - HTML coverage: uv run pytest --cov=src/backend --cov-report=html
# Additional arguments can be added after the command, e.g.:
# uv run pytest --cov=src/backend --cov-report=term -k test_load_text_file
